--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,25 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "babel-jest": "^26.6.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.4.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^9.2.0",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^26.6.0",
     "style-loader": "^4.0.0",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.101.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   },
   "keywords": [
     "messaging",
